[project]
name = "gh-contribution-histogram-action"
version = "0.1.0"
description = "Generate contribution histograms for GitHub users across repositories"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "jinja2>=3.1.6",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]
